--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "tiny",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,8 +7,11 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": {
+      "name": "Kaito Mateu",
+      "email": "kaito@crytolab.net"
+  },
+  "license": "GPLv3",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
